Glibc Syllable Changelog

* May 26th 2006 *

	o Add-on configure & configure.in  are no longer required.

* May 25th 2006 *

	o Removed some non-Syllable syscalls from syscalls.list
		o sysinfo
		o swapon
		o swapoff
		o mknod

* January 6th 2006 *

	o pwrite.c: New file.  Simple wrapper around write_pos()
	o pwrite64.c: Likewise.
	o pread.c: New file.  Simple wrapper around read_pos()
	o pread64.c: Likewise.
	o syscalls.list/event(): New syscall.
	o param.h: Define BSD names for some stuff in limits.h

* January 5th 2006 *

	o getrlimit.c/getrlimit(): Fix call to get_thread_info() for RLIMIT_STACK

* January 4th 2006 *

	o backtrace.c: New file.  A version of backtrace() that does not require DWARF2 support from libgcc.
	  From Jan Hauffa.
	o getdomain.c: New file.  The implementation is based on getdomainname.c by Joerg Schilling
	o Makefile/$(objpfx)syscall-%.h $(objpfx)syscall-%.d: Use the add-on location of syscall.h

* January 3rd 2006 *

	o libc-start.c/__libc_start_main(): Don't pre-allocate TLDs.
	o spawn_thread.c/__thread_start(): Likewise.
	o bits/libc-tsd.h: Use the TLD range 512-1024 for Glibc TSD slots.
	o termio.h: New file.

* January 1st 2006 *

	o tld.c/get_tld_addr(): Calculate the TLD addr without making a syscall.  We get the thread data address
	  from TLD_BASE, which is provided by the kernel.

* December 23rd 2005 *

	o getrlimit.c: New file.  A stub using placeholder values (That are at least semi-sensible) until we
	  have proper getrlimit/setrlimit syscalls.

* December 21st 2005 *

	o Cleaned up patches ready for Builder/mainline.  Don't patch elf/dl-support.c, sydeps/posix/pwrite64.c
	  or malloc/arena.
	o Merged Changes.2 & Changes.1 into one file (Changes.1)
	o sysdeps/unix/sysv/syllable/TODO: Removed
	o TODO: New file
	o README: New file
	o nice.c: New file.  Use generic UNIX version of nice()
	o getpriority.c, setpriority.c: New files
	o fsync.c: Implemented.  If fsync() fails, it performs a full sync() instead.
